syntax = "proto3";
package hot.compile.demo.controller;

// Config is the boilerplate configuration.
message Config {
  // ExitAfterDur requests an os.Exit(0) after a duration.
  string exit_after_dur = 1;
}